--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 <script>
   const OPENAI_PROXY_URL = "http://62.171.164.184:3001/gpt";
-  const STREAM_URL = "http://62.171.164.184:3000/stream";
+  const STREAM_URL = "ws://62.171.164.184:3000/stream";
   const LEAD_URL = "http://62.171.164.184:3001/lead";
 
 
