--- a/index.html
+++ b/index.html
@@ -255,25 +255,38 @@
   }
 
   async function playTTS(text) {
-    const indicator = document.getElementById("voice-indicator");
-    indicator.style.display = "block";
-    const res = await fetch(STREAM_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ text })
-    });
-    const blob = new Blob([await res.arrayBuffer()], { type: "audio/mpeg" });
-    if (blob.size < 1000) {
-      indicator.style.display = "none";
-      return;
-    }
-    const audio = document.getElementById("audio-player");
-    audio.src = URL.createObjectURL(blob);
-    audio.load();
-    await audio.play().catch(() => {});
-    await new Promise(r => { audio.onended = r; audio.onerror = r; });
+  const indicator = document.getElementById("voice-indicator");
+  indicator.style.display = "block";
+
+  const ws = new WebSocket("ws://62.171.164.184:3000/stream");
+
+  const audioChunks = [];
+  const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+  const source = audioContext.createBufferSource();
+
+  ws.binaryType = "arraybuffer";
+
+  ws.onmessage = async (event) => {
+    const arrayBuffer = event.data;
+    const audioBuffer = await audioContext.decodeAudioData(arrayBuffer.slice(0));
+    const source = audioContext.createBufferSource();
+    source.buffer = audioBuffer;
+    source.connect(audioContext.destination);
+    source.start();
+  };
+
+  ws.onopen = () => {
+    ws.send(text);
+  };
+
+  ws.onclose = () => {
     indicator.style.display = "none";
-  }
+  };
+
+  ws.onerror = () => {
+    indicator.style.display = "none";
+  };
+}
 
   async function dialogLoop() {
     if (isRunning) return;
