--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
   const STREAM_URL = "ws://62.171.164.184:3000/stream";
   const LEAD_URL = "http://62.171.164.184:3001/lead";
 
-
   let userId = localStorage.getItem("userId") || "user_" + Math.random().toString(36).substr(2, 9);
   localStorage.setItem("userId", userId);
 
@@ -215,7 +214,7 @@
 
   const escapeHTML = str => String(str).replace(/</g, "&lt;").replace(/>/g, "&gt;");
 
-  const renderChat = () => {}; // можно не отображать чат, если он не нужен
+  const renderChat = () => {};
 
   async function recognizeSpeech(timeout = 10000) {
     return new Promise((resolve, reject) => {
@@ -255,38 +254,39 @@
   }
 
   async function playTTS(text) {
-  const indicator = document.getElementById("voice-indicator");
-  indicator.style.display = "block";
+    const indicator = document.getElementById("voice-indicator");
+    indicator.style.display = "block";
 
-  const ws = new WebSocket("ws://62.171.164.184:3000/stream");
+    const ws = new WebSocket(STREAM_URL);
+    const audioContext = new (window.AudioContext || window.webkitAudioContext)();
 
-  const audioChunks = [];
-  const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-  const source = audioContext.createBufferSource();
+    ws.binaryType = "arraybuffer";
 
-  ws.binaryType = "arraybuffer";
+    ws.onmessage = async (event) => {
+      try {
+        const arrayBuffer = event.data;
+        const audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
+        const source = audioContext.createBufferSource();
+        source.buffer = audioBuffer;
+        source.connect(audioContext.destination);
+        source.start();
+      } catch (e) {
+        console.warn("Ошибка воспроизведения звука:", e);
+      }
+    };
 
-  ws.onmessage = async (event) => {
-    const arrayBuffer = event.data;
-    const audioBuffer = await audioContext.decodeAudioData(arrayBuffer.slice(0));
-    const source = audioContext.createBufferSource();
-    source.buffer = audioBuffer;
-    source.connect(audioContext.destination);
-    source.start();
-  };
+    ws.onopen = () => {
+      ws.send(text);
+    };
 
-  ws.onopen = () => {
-    ws.send(text);
-  };
+    ws.onclose = () => {
+      indicator.style.display = "none";
+    };
 
-  ws.onclose = () => {
-    indicator.style.display = "none";
-  };
-
-  ws.onerror = () => {
-    indicator.style.display = "none";
-  };
-}
+    ws.onerror = () => {
+      indicator.style.display = "none";
+    };
+  }
 
   async function dialogLoop() {
     if (isRunning) return;
@@ -374,15 +374,15 @@
     await playTTS(msg);
   }
 
- document.querySelectorAll(".cta-button").forEach(btn => {
-  btn.addEventListener("click", () => {
-    if (!isRunning) {
-      messages = [];
-      chatHistory = [];
-      dialogLoop();
-    }
+  document.querySelectorAll(".cta-button").forEach(btn => {
+    btn.addEventListener("click", () => {
+      if (!isRunning) {
+        messages = [];
+        chatHistory = [];
+        dialogLoop();
+      }
+    });
   });
-});
 
   document.getElementById("phone")?.addEventListener("input", function () {
     if (!this.value.startsWith("+7")) this.value = "+7";
@@ -398,6 +398,5 @@
     100% { transform: scale(1); opacity: 1; }
   }
 </style>
-
 </body>
 </html>
